fix z-index issue

--- a/src/index.scss
+++ b/src/index.scss
@@ -375,7 +375,6 @@ my-app { padding: 0 !important; }
 .k-drawer-container {
     width: 100%;
     height: 100%;
-    z-index: 3000;
     position: relative;
 }
 
